# serializer version: 1
# name: test_forecast_service[get_forecast]
  dict({
    'forecast': list([
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T12:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 13.0,
        'wind_bearing': 'WNW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-27T12:00:00+00:00',
        'precipitation_probability': 14,
        'temperature': 11.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T12:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 12.0,
        'wind_bearing': 'ENE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2020-04-29T12:00:00+00:00',
        'precipitation_probability': 59,
        'temperature': 13.0,
        'wind_bearing': 'SE',
        'wind_speed': 20.92,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecast].1
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-25T15:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 19.0,
        'wind_bearing': 'S',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-25T18:00:00+00:00',
        'precipitation_probability': 2,
        'temperature': 17.0,
        'wind_bearing': 'WNW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-25T21:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 14.0,
        'wind_bearing': 'NW',
        'wind_speed': 3.22,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-26T00:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 13.0,
        'wind_bearing': 'WSW',
        'wind_speed': 3.22,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-26T03:00:00+00:00',
        'precipitation_probability': 2,
        'temperature': 12.0,
        'wind_bearing': 'WNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T06:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 11.0,
        'wind_bearing': 'NW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T09:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 12.0,
        'wind_bearing': 'WNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T12:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 12.0,
        'wind_bearing': 'WNW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T15:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 12.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T18:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 11.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T21:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-27T00:00:00+00:00',
        'precipitation_probability': 11,
        'temperature': 9.0,
        'wind_bearing': 'WNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-27T03:00:00+00:00',
        'precipitation_probability': 12,
        'temperature': 8.0,
        'wind_bearing': 'WNW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-27T06:00:00+00:00',
        'precipitation_probability': 14,
        'temperature': 8.0,
        'wind_bearing': 'NW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-27T09:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 9.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-27T12:00:00+00:00',
        'precipitation_probability': 4,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-27T15:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-27T18:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2020-04-27T21:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 9.0,
        'wind_bearing': 'NW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2020-04-28T00:00:00+00:00',
        'precipitation_probability': 2,
        'temperature': 8.0,
        'wind_bearing': 'NNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2020-04-28T03:00:00+00:00',
        'precipitation_probability': 3,
        'temperature': 7.0,
        'wind_bearing': 'W',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-28T06:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 6.0,
        'wind_bearing': 'S',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-28T09:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 9.0,
        'wind_bearing': 'ENE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T12:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 11.0,
        'wind_bearing': 'ENE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T15:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 12.0,
        'wind_bearing': 'N',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T18:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 11.0,
        'wind_bearing': 'N',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T21:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 10.0,
        'wind_bearing': 'NNE',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T00:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 9.0,
        'wind_bearing': 'E',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-29T03:00:00+00:00',
        'precipitation_probability': 3,
        'temperature': 8.0,
        'wind_bearing': 'SSE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T06:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 8.0,
        'wind_bearing': 'SE',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T09:00:00+00:00',
        'precipitation_probability': 12,
        'temperature': 10.0,
        'wind_bearing': 'SE',
        'wind_speed': 17.7,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2020-04-29T12:00:00+00:00',
        'precipitation_probability': 47,
        'temperature': 12.0,
        'wind_bearing': 'SE',
        'wind_speed': 20.92,
      }),
      dict({
        'condition': 'pouring',
        'datetime': '2020-04-29T15:00:00+00:00',
        'precipitation_probability': 59,
        'temperature': 13.0,
        'wind_bearing': 'SSE',
        'wind_speed': 20.92,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2020-04-29T18:00:00+00:00',
        'precipitation_probability': 39,
        'temperature': 12.0,
        'wind_bearing': 'SSE',
        'wind_speed': 17.7,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T21:00:00+00:00',
        'precipitation_probability': 19,
        'temperature': 11.0,
        'wind_bearing': 'SSE',
        'wind_speed': 20.92,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecast].2
  dict({
    'forecast': list([
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T12:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 13.0,
        'wind_bearing': 'WNW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-27T12:00:00+00:00',
        'precipitation_probability': 14,
        'temperature': 11.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T12:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 12.0,
        'wind_bearing': 'ENE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2020-04-29T12:00:00+00:00',
        'precipitation_probability': 59,
        'temperature': 13.0,
        'wind_bearing': 'SE',
        'wind_speed': 20.92,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecast].3
  dict({
    'forecast': list([
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-25T15:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 19.0,
        'wind_bearing': 'S',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-25T18:00:00+00:00',
        'precipitation_probability': 2,
        'temperature': 17.0,
        'wind_bearing': 'WNW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-25T21:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 14.0,
        'wind_bearing': 'NW',
        'wind_speed': 3.22,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-26T00:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 13.0,
        'wind_bearing': 'WSW',
        'wind_speed': 3.22,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-26T03:00:00+00:00',
        'precipitation_probability': 2,
        'temperature': 12.0,
        'wind_bearing': 'WNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T06:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 11.0,
        'wind_bearing': 'NW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T09:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 12.0,
        'wind_bearing': 'WNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T12:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 12.0,
        'wind_bearing': 'WNW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T15:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 12.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T18:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 11.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-26T21:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-27T00:00:00+00:00',
        'precipitation_probability': 11,
        'temperature': 9.0,
        'wind_bearing': 'WNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-27T03:00:00+00:00',
        'precipitation_probability': 12,
        'temperature': 8.0,
        'wind_bearing': 'WNW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-27T06:00:00+00:00',
        'precipitation_probability': 14,
        'temperature': 8.0,
        'wind_bearing': 'NW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-27T09:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 9.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-27T12:00:00+00:00',
        'precipitation_probability': 4,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-27T15:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-27T18:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 10.0,
        'wind_bearing': 'NW',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2020-04-27T21:00:00+00:00',
        'precipitation_probability': 1,
        'temperature': 9.0,
        'wind_bearing': 'NW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2020-04-28T00:00:00+00:00',
        'precipitation_probability': 2,
        'temperature': 8.0,
        'wind_bearing': 'NNW',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'clear-night',
        'datetime': '2020-04-28T03:00:00+00:00',
        'precipitation_probability': 3,
        'temperature': 7.0,
        'wind_bearing': 'W',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'sunny',
        'datetime': '2020-04-28T06:00:00+00:00',
        'precipitation_probability': 5,
        'temperature': 6.0,
        'wind_bearing': 'S',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-28T09:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 9.0,
        'wind_bearing': 'ENE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T12:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 11.0,
        'wind_bearing': 'ENE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T15:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 12.0,
        'wind_bearing': 'N',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T18:00:00+00:00',
        'precipitation_probability': 10,
        'temperature': 11.0,
        'wind_bearing': 'N',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-28T21:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 10.0,
        'wind_bearing': 'NNE',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T00:00:00+00:00',
        'precipitation_probability': 6,
        'temperature': 9.0,
        'wind_bearing': 'E',
        'wind_speed': 6.44,
      }),
      dict({
        'condition': 'partlycloudy',
        'datetime': '2020-04-29T03:00:00+00:00',
        'precipitation_probability': 3,
        'temperature': 8.0,
        'wind_bearing': 'SSE',
        'wind_speed': 11.27,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T06:00:00+00:00',
        'precipitation_probability': 9,
        'temperature': 8.0,
        'wind_bearing': 'SE',
        'wind_speed': 14.48,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T09:00:00+00:00',
        'precipitation_probability': 12,
        'temperature': 10.0,
        'wind_bearing': 'SE',
        'wind_speed': 17.7,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2020-04-29T12:00:00+00:00',
        'precipitation_probability': 47,
        'temperature': 12.0,
        'wind_bearing': 'SE',
        'wind_speed': 20.92,
      }),
      dict({
        'condition': 'pouring',
        'datetime': '2020-04-29T15:00:00+00:00',
        'precipitation_probability': 59,
        'temperature': 13.0,
        'wind_bearing': 'SSE',
        'wind_speed': 20.92,
      }),
      dict({
        'condition': 'rainy',
        'datetime': '2020-04-29T18:00:00+00:00',
        'precipitation_probability': 39,
        'temperature': 12.0,
        'wind_bearing': 'SSE',
        'wind_speed': 17.7,
      }),
      dict({
        'condition': 'cloudy',
        'datetime': '2020-04-29T21:00:00+00:00',
        'precipitation_probability': 19,
        'temperature': 11.0,
        'wind_bearing': 'SSE',
        'wind_speed': 20.92,
      }),
    ]),
  })
# ---
# name: test_forecast_service[get_forecast].4
  dict({
    'forecast': list([
    ]),
  })
# ---
# name: test_forecast_service[get_forecasts]
  dict({
    'weather.met_office_wavertree_daily': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T12:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 13.0,
          'wind_bearing': 'WNW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-27T12:00:00+00:00',
          'precipitation_probability': 14,
          'temperature': 11.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T12:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 12.0,
          'wind_bearing': 'ENE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2020-04-29T12:00:00+00:00',
          'precipitation_probability': 59,
          'temperature': 13.0,
          'wind_bearing': 'SE',
          'wind_speed': 20.92,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].1
  dict({
    'weather.met_office_wavertree_daily': dict({
      'forecast': list([
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-25T15:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 19.0,
          'wind_bearing': 'S',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-25T18:00:00+00:00',
          'precipitation_probability': 2,
          'temperature': 17.0,
          'wind_bearing': 'WNW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-25T21:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 14.0,
          'wind_bearing': 'NW',
          'wind_speed': 3.22,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-26T00:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 13.0,
          'wind_bearing': 'WSW',
          'wind_speed': 3.22,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-26T03:00:00+00:00',
          'precipitation_probability': 2,
          'temperature': 12.0,
          'wind_bearing': 'WNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T06:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 11.0,
          'wind_bearing': 'NW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T09:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 12.0,
          'wind_bearing': 'WNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T12:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 12.0,
          'wind_bearing': 'WNW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T15:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 12.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T18:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 11.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T21:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-27T00:00:00+00:00',
          'precipitation_probability': 11,
          'temperature': 9.0,
          'wind_bearing': 'WNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-27T03:00:00+00:00',
          'precipitation_probability': 12,
          'temperature': 8.0,
          'wind_bearing': 'WNW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-27T06:00:00+00:00',
          'precipitation_probability': 14,
          'temperature': 8.0,
          'wind_bearing': 'NW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-27T09:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 9.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-27T12:00:00+00:00',
          'precipitation_probability': 4,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-27T15:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-27T18:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2020-04-27T21:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 9.0,
          'wind_bearing': 'NW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2020-04-28T00:00:00+00:00',
          'precipitation_probability': 2,
          'temperature': 8.0,
          'wind_bearing': 'NNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2020-04-28T03:00:00+00:00',
          'precipitation_probability': 3,
          'temperature': 7.0,
          'wind_bearing': 'W',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-28T06:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 6.0,
          'wind_bearing': 'S',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-28T09:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 9.0,
          'wind_bearing': 'ENE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T12:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 11.0,
          'wind_bearing': 'ENE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T15:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 12.0,
          'wind_bearing': 'N',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T18:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 11.0,
          'wind_bearing': 'N',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T21:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 10.0,
          'wind_bearing': 'NNE',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T00:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 9.0,
          'wind_bearing': 'E',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-29T03:00:00+00:00',
          'precipitation_probability': 3,
          'temperature': 8.0,
          'wind_bearing': 'SSE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T06:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 8.0,
          'wind_bearing': 'SE',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T09:00:00+00:00',
          'precipitation_probability': 12,
          'temperature': 10.0,
          'wind_bearing': 'SE',
          'wind_speed': 17.7,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2020-04-29T12:00:00+00:00',
          'precipitation_probability': 47,
          'temperature': 12.0,
          'wind_bearing': 'SE',
          'wind_speed': 20.92,
        }),
        dict({
          'condition': 'pouring',
          'datetime': '2020-04-29T15:00:00+00:00',
          'precipitation_probability': 59,
          'temperature': 13.0,
          'wind_bearing': 'SSE',
          'wind_speed': 20.92,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2020-04-29T18:00:00+00:00',
          'precipitation_probability': 39,
          'temperature': 12.0,
          'wind_bearing': 'SSE',
          'wind_speed': 17.7,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T21:00:00+00:00',
          'precipitation_probability': 19,
          'temperature': 11.0,
          'wind_bearing': 'SSE',
          'wind_speed': 20.92,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].2
  dict({
    'weather.met_office_wavertree_daily': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T12:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 13.0,
          'wind_bearing': 'WNW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-27T12:00:00+00:00',
          'precipitation_probability': 14,
          'temperature': 11.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T12:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 12.0,
          'wind_bearing': 'ENE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2020-04-29T12:00:00+00:00',
          'precipitation_probability': 59,
          'temperature': 13.0,
          'wind_bearing': 'SE',
          'wind_speed': 20.92,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].3
  dict({
    'weather.met_office_wavertree_daily': dict({
      'forecast': list([
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-25T15:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 19.0,
          'wind_bearing': 'S',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-25T18:00:00+00:00',
          'precipitation_probability': 2,
          'temperature': 17.0,
          'wind_bearing': 'WNW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-25T21:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 14.0,
          'wind_bearing': 'NW',
          'wind_speed': 3.22,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-26T00:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 13.0,
          'wind_bearing': 'WSW',
          'wind_speed': 3.22,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-26T03:00:00+00:00',
          'precipitation_probability': 2,
          'temperature': 12.0,
          'wind_bearing': 'WNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T06:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 11.0,
          'wind_bearing': 'NW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T09:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 12.0,
          'wind_bearing': 'WNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T12:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 12.0,
          'wind_bearing': 'WNW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T15:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 12.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T18:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 11.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-26T21:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-27T00:00:00+00:00',
          'precipitation_probability': 11,
          'temperature': 9.0,
          'wind_bearing': 'WNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-27T03:00:00+00:00',
          'precipitation_probability': 12,
          'temperature': 8.0,
          'wind_bearing': 'WNW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-27T06:00:00+00:00',
          'precipitation_probability': 14,
          'temperature': 8.0,
          'wind_bearing': 'NW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-27T09:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 9.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-27T12:00:00+00:00',
          'precipitation_probability': 4,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-27T15:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-27T18:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 10.0,
          'wind_bearing': 'NW',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2020-04-27T21:00:00+00:00',
          'precipitation_probability': 1,
          'temperature': 9.0,
          'wind_bearing': 'NW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2020-04-28T00:00:00+00:00',
          'precipitation_probability': 2,
          'temperature': 8.0,
          'wind_bearing': 'NNW',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'clear-night',
          'datetime': '2020-04-28T03:00:00+00:00',
          'precipitation_probability': 3,
          'temperature': 7.0,
          'wind_bearing': 'W',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'sunny',
          'datetime': '2020-04-28T06:00:00+00:00',
          'precipitation_probability': 5,
          'temperature': 6.0,
          'wind_bearing': 'S',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-28T09:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 9.0,
          'wind_bearing': 'ENE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T12:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 11.0,
          'wind_bearing': 'ENE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T15:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 12.0,
          'wind_bearing': 'N',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T18:00:00+00:00',
          'precipitation_probability': 10,
          'temperature': 11.0,
          'wind_bearing': 'N',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-28T21:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 10.0,
          'wind_bearing': 'NNE',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T00:00:00+00:00',
          'precipitation_probability': 6,
          'temperature': 9.0,
          'wind_bearing': 'E',
          'wind_speed': 6.44,
        }),
        dict({
          'condition': 'partlycloudy',
          'datetime': '2020-04-29T03:00:00+00:00',
          'precipitation_probability': 3,
          'temperature': 8.0,
          'wind_bearing': 'SSE',
          'wind_speed': 11.27,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T06:00:00+00:00',
          'precipitation_probability': 9,
          'temperature': 8.0,
          'wind_bearing': 'SE',
          'wind_speed': 14.48,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T09:00:00+00:00',
          'precipitation_probability': 12,
          'temperature': 10.0,
          'wind_bearing': 'SE',
          'wind_speed': 17.7,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2020-04-29T12:00:00+00:00',
          'precipitation_probability': 47,
          'temperature': 12.0,
          'wind_bearing': 'SE',
          'wind_speed': 20.92,
        }),
        dict({
          'condition': 'pouring',
          'datetime': '2020-04-29T15:00:00+00:00',
          'precipitation_probability': 59,
          'temperature': 13.0,
          'wind_bearing': 'SSE',
          'wind_speed': 20.92,
        }),
        dict({
          'condition': 'rainy',
          'datetime': '2020-04-29T18:00:00+00:00',
          'precipitation_probability': 39,
          'temperature': 12.0,
          'wind_bearing': 'SSE',
          'wind_speed': 17.7,
        }),
        dict({
          'condition': 'cloudy',
          'datetime': '2020-04-29T21:00:00+00:00',
          'precipitation_probability': 19,
          'temperature': 11.0,
          'wind_bearing': 'SSE',
          'wind_speed': 20.92,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_service[get_forecasts].4
  dict({
    'weather.met_office_wavertree_daily': dict({
      'forecast': list([
      ]),
    }),
  })
# ---
# name: test_forecast_subscription[daily]
  list([
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T12:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 13.0,
      'wind_bearing': 'WNW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-27T12:00:00+00:00',
      'precipitation_probability': 14,
      'temperature': 11.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T12:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 12.0,
      'wind_bearing': 'ENE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2020-04-29T12:00:00+00:00',
      'precipitation_probability': 59,
      'temperature': 13.0,
      'wind_bearing': 'SE',
      'wind_speed': 20.92,
    }),
  ])
# ---
# name: test_forecast_subscription[daily].1
  list([
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T12:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 13.0,
      'wind_bearing': 'WNW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-27T12:00:00+00:00',
      'precipitation_probability': 14,
      'temperature': 11.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T12:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 12.0,
      'wind_bearing': 'ENE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2020-04-29T12:00:00+00:00',
      'precipitation_probability': 59,
      'temperature': 13.0,
      'wind_bearing': 'SE',
      'wind_speed': 20.92,
    }),
  ])
# ---
# name: test_forecast_subscription[hourly]
  list([
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-25T15:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 19.0,
      'wind_bearing': 'S',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-25T18:00:00+00:00',
      'precipitation_probability': 2,
      'temperature': 17.0,
      'wind_bearing': 'WNW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-25T21:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 14.0,
      'wind_bearing': 'NW',
      'wind_speed': 3.22,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-26T00:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 13.0,
      'wind_bearing': 'WSW',
      'wind_speed': 3.22,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-26T03:00:00+00:00',
      'precipitation_probability': 2,
      'temperature': 12.0,
      'wind_bearing': 'WNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T06:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 11.0,
      'wind_bearing': 'NW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T09:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 12.0,
      'wind_bearing': 'WNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T12:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 12.0,
      'wind_bearing': 'WNW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T15:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 12.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T18:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 11.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T21:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-27T00:00:00+00:00',
      'precipitation_probability': 11,
      'temperature': 9.0,
      'wind_bearing': 'WNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-27T03:00:00+00:00',
      'precipitation_probability': 12,
      'temperature': 8.0,
      'wind_bearing': 'WNW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-27T06:00:00+00:00',
      'precipitation_probability': 14,
      'temperature': 8.0,
      'wind_bearing': 'NW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-27T09:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 9.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-27T12:00:00+00:00',
      'precipitation_probability': 4,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-27T15:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-27T18:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2020-04-27T21:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 9.0,
      'wind_bearing': 'NW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2020-04-28T00:00:00+00:00',
      'precipitation_probability': 2,
      'temperature': 8.0,
      'wind_bearing': 'NNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2020-04-28T03:00:00+00:00',
      'precipitation_probability': 3,
      'temperature': 7.0,
      'wind_bearing': 'W',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-28T06:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 6.0,
      'wind_bearing': 'S',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-28T09:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 9.0,
      'wind_bearing': 'ENE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T12:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 11.0,
      'wind_bearing': 'ENE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T15:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 12.0,
      'wind_bearing': 'N',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T18:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 11.0,
      'wind_bearing': 'N',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T21:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 10.0,
      'wind_bearing': 'NNE',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T00:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 9.0,
      'wind_bearing': 'E',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-29T03:00:00+00:00',
      'precipitation_probability': 3,
      'temperature': 8.0,
      'wind_bearing': 'SSE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T06:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 8.0,
      'wind_bearing': 'SE',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T09:00:00+00:00',
      'precipitation_probability': 12,
      'temperature': 10.0,
      'wind_bearing': 'SE',
      'wind_speed': 17.7,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2020-04-29T12:00:00+00:00',
      'precipitation_probability': 47,
      'temperature': 12.0,
      'wind_bearing': 'SE',
      'wind_speed': 20.92,
    }),
    dict({
      'condition': 'pouring',
      'datetime': '2020-04-29T15:00:00+00:00',
      'precipitation_probability': 59,
      'temperature': 13.0,
      'wind_bearing': 'SSE',
      'wind_speed': 20.92,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2020-04-29T18:00:00+00:00',
      'precipitation_probability': 39,
      'temperature': 12.0,
      'wind_bearing': 'SSE',
      'wind_speed': 17.7,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T21:00:00+00:00',
      'precipitation_probability': 19,
      'temperature': 11.0,
      'wind_bearing': 'SSE',
      'wind_speed': 20.92,
    }),
  ])
# ---
# name: test_forecast_subscription[hourly].1
  list([
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-25T15:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 19.0,
      'wind_bearing': 'S',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-25T18:00:00+00:00',
      'precipitation_probability': 2,
      'temperature': 17.0,
      'wind_bearing': 'WNW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-25T21:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 14.0,
      'wind_bearing': 'NW',
      'wind_speed': 3.22,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-26T00:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 13.0,
      'wind_bearing': 'WSW',
      'wind_speed': 3.22,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-26T03:00:00+00:00',
      'precipitation_probability': 2,
      'temperature': 12.0,
      'wind_bearing': 'WNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T06:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 11.0,
      'wind_bearing': 'NW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T09:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 12.0,
      'wind_bearing': 'WNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T12:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 12.0,
      'wind_bearing': 'WNW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T15:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 12.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T18:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 11.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-26T21:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-27T00:00:00+00:00',
      'precipitation_probability': 11,
      'temperature': 9.0,
      'wind_bearing': 'WNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-27T03:00:00+00:00',
      'precipitation_probability': 12,
      'temperature': 8.0,
      'wind_bearing': 'WNW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-27T06:00:00+00:00',
      'precipitation_probability': 14,
      'temperature': 8.0,
      'wind_bearing': 'NW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-27T09:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 9.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-27T12:00:00+00:00',
      'precipitation_probability': 4,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-27T15:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-27T18:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 10.0,
      'wind_bearing': 'NW',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2020-04-27T21:00:00+00:00',
      'precipitation_probability': 1,
      'temperature': 9.0,
      'wind_bearing': 'NW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2020-04-28T00:00:00+00:00',
      'precipitation_probability': 2,
      'temperature': 8.0,
      'wind_bearing': 'NNW',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'clear-night',
      'datetime': '2020-04-28T03:00:00+00:00',
      'precipitation_probability': 3,
      'temperature': 7.0,
      'wind_bearing': 'W',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'sunny',
      'datetime': '2020-04-28T06:00:00+00:00',
      'precipitation_probability': 5,
      'temperature': 6.0,
      'wind_bearing': 'S',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-28T09:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 9.0,
      'wind_bearing': 'ENE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T12:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 11.0,
      'wind_bearing': 'ENE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T15:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 12.0,
      'wind_bearing': 'N',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T18:00:00+00:00',
      'precipitation_probability': 10,
      'temperature': 11.0,
      'wind_bearing': 'N',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-28T21:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 10.0,
      'wind_bearing': 'NNE',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T00:00:00+00:00',
      'precipitation_probability': 6,
      'temperature': 9.0,
      'wind_bearing': 'E',
      'wind_speed': 6.44,
    }),
    dict({
      'condition': 'partlycloudy',
      'datetime': '2020-04-29T03:00:00+00:00',
      'precipitation_probability': 3,
      'temperature': 8.0,
      'wind_bearing': 'SSE',
      'wind_speed': 11.27,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T06:00:00+00:00',
      'precipitation_probability': 9,
      'temperature': 8.0,
      'wind_bearing': 'SE',
      'wind_speed': 14.48,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T09:00:00+00:00',
      'precipitation_probability': 12,
      'temperature': 10.0,
      'wind_bearing': 'SE',
      'wind_speed': 17.7,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2020-04-29T12:00:00+00:00',
      'precipitation_probability': 47,
      'temperature': 12.0,
      'wind_bearing': 'SE',
      'wind_speed': 20.92,
    }),
    dict({
      'condition': 'pouring',
      'datetime': '2020-04-29T15:00:00+00:00',
      'precipitation_probability': 59,
      'temperature': 13.0,
      'wind_bearing': 'SSE',
      'wind_speed': 20.92,
    }),
    dict({
      'condition': 'rainy',
      'datetime': '2020-04-29T18:00:00+00:00',
      'precipitation_probability': 39,
      'temperature': 12.0,
      'wind_bearing': 'SSE',
      'wind_speed': 17.7,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2020-04-29T21:00:00+00:00',
      'precipitation_probability': 19,
      'temperature': 11.0,
      'wind_bearing': 'SSE',
      'wind_speed': 20.92,
    }),
  ])
# ---
